# hulk

./: Cargo.toml
crates/configuration_system/: Cargo.toml
crates/configuration_system/src/: lib.rs
crates/configuration_system_derive/: Cargo.toml
crates/configuration_system_derive/src/: lib.rs
crates/control/src/: game_controller_state_filter.rs  obstacle_filter.rs  role_assignment.rs  zero_moment_point_provider.rs
crates/control/src/behavior/: defend.rs  walk_to_pose.rs
crates/filtering/src/: fit_normal_distribution.rs  lib.rs  mean_clustering.rs
crates/geometry/src/: is_inside_polygon.rs
crates/path_serde/src/: not_supported.rs
crates/projection/src/: lib.rs
crates/types/src/: detected_feet.rs  field_dimensions.rs  multivariate_normal_distribution.rs  parameters.rs
crates/vision/src/: ball_detection.rs  feet_detection.rs
etc/parameters/: default.json
tools/labello/: Cargo.toml
tools/labello/src/: github_integration.rs  main.rs  polygon.rs  preview_widget.rs  segmentator_widget.rs  segmented_control.rs
tools/machine-learning/object_detection/: .gitignore  pyproject.toml  requirements.txt  setup.py  sync
tools/machine-learning/object_detection/experiments/: nested.py  query.py  test_tqdm.py  train_mnist.py  train_ssd.py  (+1 more)
tools/machine-learning/object_detection/tools/ssd-viewer/: Cargo.toml
tools/machine-learning/object_detection/tools/ssd-viewer/src/: cli.rs  main.rs  model.rs
tools/segmentator/src/: control_pane.rs  export.rs  main.rs  polygon.rs  preview_widget.rs
tools/twix/: Cargo.toml
tools/twix/src/: configuration.rs  main.rs
(+39 files in other folders)
