[package]
name = "ssd-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
clap.workspace = true
eframe.workspace = true
egui_extras = { workspace = true, features = ["image"] }
image = { version = "0.25", features = ["png", "jpeg"] }
ort = "2.0.0-rc.5"
