[package]
name = "ssd-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
clap.workspace = true
eframe.workspace = true
egui_extras = { workspace = true, features = ["image", "file"] }
image = { version = "0.25", features = ["png", "jpeg"] }
ort = { version = "2.0.0-rc.5", features = ["ndarray"] }
color-eyre.workspace = true
ndarray = { version = "0.16"}
